--- a/zoe_final/Assembly-CSharp-firstpass.csproj
+++ b/zoe_final/Assembly-CSharp-firstpass.csproj
@@ -89,9 +89,12 @@
      <Compile Include="Assets\Standard Assets\Utility\TimedObjectDestructor.cs" />
      <Compile Include="Assets\Standard Assets\Utility\WaypointCircuit.cs" />
      <Compile Include="Assets\Standard Assets\Utility\WaypointProgressTracker.cs" />
+     <None Include="Assets\UniOSC\Examples\MappingFiles\Read.Me.First!.txt" />
      <None Include="Assets\Shaders\Mirror2.shader" />
+     <None Include="Assets\UniOSC\Scripts\External\InputDevices\ReadMe.txt" />
      <None Include="Assets\Standard Assets\CrossPlatformInput\CrossPlatformInputGuidelines.txt" />
      <None Include="Assets\Shaders\Mirror.shader" />
+     <None Include="Assets\UniOSC\Scripts\External\Flux\ReadMe.txt" />
      <None Include="Assets\Standard Assets\Characters\ThirdPersonCharacter\ThirdPersonCharacterGuidelines.txt" />
      <None Include="Assets\Models\indoor_plant2\Indoor plant_2.txt" />
      <None Include="Assets\Standard Assets\Characters\FirstPersonCharacter\FirstPersonCharacterGuidelines.txt" />
@@ -105,6 +108,9 @@
  </Reference>
  <Reference Include="UnityEngine.Analytics">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/UnityAnalytics/UnityEngine.Analytics.dll</HintPath>
+ </Reference>
+ <Reference Include="OSCsharp">
+ <HintPath>C:/Users/itpstudent/Documents/zoe_final/Assets/UniOSC/Lib/OSCsharp.dll</HintPath>
  </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
